--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 	<groupId>org.springframework.samples</groupId>
 	<artifactId>spring-petclinic</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-
 	<name>petclinic</name>
 	<packaging>war</packaging>
 
@@ -400,9 +399,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
-				<configuration>
+				<!-- <configuration>
 					<warName>petclinic</warName>
-				</configuration>
+				</configuration> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
