--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>org.springframework.samples</groupId>
 	<artifactId>spring-petclinic</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+
 	<name>petclinic</name>
 	<packaging>war</packaging>
 
@@ -15,8 +16,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Spring -->
-		<spring-framework.version>4.3.25.RELEASE</spring-framework.version>
+		<!-- <spring-framework.version>4.1.1.RELEASE</spring-framework.version> -->
+		<spring-framework.version>4.3.17.RELEASE</spring-framework.version>
 		<spring-data-jpa.version>1.7.0.RELEASE</spring-data-jpa.version>
+
 
 		<!-- Java EE / Java SE dependencies -->
 		<jsp.version>2.2</jsp.version>
