--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 		<!-- Spring -->
 		<!-- <spring-framework.version>4.1.1.RELEASE</spring-framework.version> -->
 		<spring-framework.version>4.1.9.RELEASE</spring-framework.version>
-		<spring-data-jpa.version>1.7.0.RELEASE</spring-data-jpa.version>
-
+		<!-- <spring-data-jpa.version>1.7.0.RELEASE</spring-data-jpa.version> -->
+		<spring-data-jpa.version>1.11.22.RELEASE</spring-data-jpa.version>
 
 		<!-- Java EE / Java SE dependencies -->
 		<jsp.version>2.2</jsp.version>
