--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,18 @@
 			<artifactId>datatables-export-itext</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+
+		<!-- Prometheus -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
