--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.2.0.RELEASE</version>
 		</dependency>		
 		<dependency>
 			<groupId>io.micrometer</groupId>
