--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -126,4 +126,14 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
     		<mvc:view-controller path="/" view-name="welcome" /> 
     -->
 
+    <!-- Prometheus -->    
+    <servlet>
+        <servlet-name>metrics</servlet-name>
+        <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>metrics</servlet-name>
+        <url-pattern>/metrics</url-pattern>
+    </servlet-mapping>      
+
 </web-app>
