--- a/pom.xml
+++ b/pom.xml
@@ -318,12 +318,18 @@
 		</dependency>
 
 		<!-- Prometheus -->
-		<!-- The client -->
+		<!-- The Client -->
 		<dependency>
 			<groupId>io.prometheus</groupId>
 			<artifactId>simpleclient</artifactId>
 			<version>0.8.0</version>
 		</dependency>
+		<!-- The Servlet -->
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_servlet</artifactId>
+			<version>0.8.0</version>
+		</dependency>		
 		<!-- Hotspot JVM metrics-->
 		<dependency>
 			<groupId>io.prometheus</groupId>
