--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,9 +40,35 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <!--
-- Servlet that dispatches request to registered handlers (Controller implementations).
--->
+    <!-- Prometheus Filter -->
+    <filter>
+        <filter-name>prometheusFilter</filter-name>
+        <filter-class>io.prometheus.client.filter.MetricsFilter</filter-class>
+        <init-param>
+            <param-name>metric-name</param-name>
+            <param-value>webapp_metrics_filter</param-value>
+        </init-param>
+        <init-param>
+            <param-name>help</param-name>
+            <param-value>This is the help for your metrics filter</param-value>
+        </init-param>
+        <init-param>
+            <param-name>buckets</param-name>
+            <param-value>0.005,0.01,0.025,0.05,0.075,0.1,0.25,0.5,0.75,1,2.5,5,7.5,10</param-value>
+        </init-param>
+        <!-- Optionally override path components; anything less than 1 (1 is the default)
+            means full granularity -->
+        <init-param>
+            <param-name>path-components</param-name>
+            <param-value>1</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>prometheusFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <!-- Servlet that dispatches request to registered handlers (Controller implementations) -->
     <servlet>
         <servlet-name>petclinic</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -126,7 +152,7 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
     		<mvc:view-controller path="/" view-name="welcome" /> 
     -->
 
-    <!-- Prometheus -->    
+    <!-- Prometheus Servlet -->    
     <servlet>
         <servlet-name>metrics</servlet-name>
         <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
