--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         </init-param>
         <init-param>
             <param-name>buckets</param-name>
-            <param-value>0.5, 0.9, 0.95, 0.99, 0.999</param-value>
+            <param-value>0.005,0.01,0.025,0.05,0.075,0.1,0.25,0.5,0.75,1,2.5,5,7.5,10</param-value>
         </init-param>
         <!-- Optionally override path components; anything less than 1 (1 is the default)
             means full granularity -->
