--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,11 @@
 			<artifactId>simpleclient_pushgateway</artifactId>
 			<version>0.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.3.0</version>
+		</dependency>			
 
 	</dependencies>
 	<dependencyManagement>
