--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@
 management.metrics.distribution.percentileshistogram.http.server.requests=true
 management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
 management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.security.enabled=false
+management.endpoint.shutdown.enabled=true
