--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     </listener>
 
     <!-- Prometheus Filter -->
-    <filter>
+    <!-- <filter>
         <filter-name>prometheusFilter</filter-name>
         <filter-class>io.prometheus.client.filter.MetricsFilter</filter-class>
         <init-param>
@@ -56,8 +56,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
             <param-name>buckets</param-name>
             <param-value>0.005,0.01,0.025,0.05,0.075,0.1,0.25,0.5,0.75,1,2.5,5,7.5,10</param-value>
         </init-param>
-        <!-- Optionally override path components; anything less than 1 (1 is the default)
-            means full granularity -->
         <init-param>
             <param-name>path-components</param-name>
             <param-value>1</param-value>
@@ -66,7 +64,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     <filter-mapping>
         <filter-name>prometheusFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping> -->
 
     <!-- Servlet that dispatches request to registered handlers (Controller implementations) -->
     <servlet>
@@ -153,13 +151,13 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
     -->
 
     <!-- Prometheus Servlet -->    
-    <servlet>
+    <!-- <servlet>
         <servlet-name>metrics</servlet-name>
         <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>metrics</servlet-name>
         <url-pattern>/actuator/prometheus</url-pattern>
-    </servlet-mapping>      
+    </servlet-mapping>       -->
 
 </web-app>
