--- a/pom.xml
+++ b/pom.xml
@@ -345,9 +345,14 @@
 		</dependency> -->
 		
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.2.0.RELEASE</version>
+		</dependency>		
+		<dependency>
 			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-spring-legacy</artifactId>
-			<version>1.3.1</version>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.3.0</version>
 		</dependency>			
 
 	</dependencies>
