--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,12 @@
 
 		<!-- Spring -->
 		<!-- <spring-framework.version>4.1.1.RELEASE</spring-framework.version> -->
-		<spring-framework.version>4.1.9.RELEASE</spring-framework.version>
+		<!-- <spring-framework.version>4.1.9.RELEASE</spring-framework.version> -->
+		<spring-framework.version>4.3.25.RELEASE</spring-framework.version>
 		<!-- <spring-framework.version>5.2.1.RELEASE</spring-framework.version> -->
 		<!-- <spring-data-jpa.version>1.7.0.RELEASE</spring-data-jpa.version> -->
-		<spring-data-jpa.version>1.11.22.RELEASE</spring-data-jpa.version>
+		<!-- <spring-data-jpa.version>1.11.22.RELEASE</spring-data-jpa.version> -->
+		<spring-data-jpa.version>1.11.23.RELEASE</spring-data-jpa.version>
 		<!-- <spring-data-jpa.version>2.2.2.RELEASE</spring-data-jpa.version> -->
 
 		<!-- Java EE / Java SE dependencies -->
