--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     </listener>
 
     <!-- Prometheus Filter -->
-    <!-- <filter>
+    <filter>
         <filter-name>prometheusFilter</filter-name>
         <filter-class>io.prometheus.client.filter.MetricsFilter</filter-class>
         <init-param>
@@ -64,7 +64,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     <filter-mapping>
         <filter-name>prometheusFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> -->
+    </filter-mapping>
 
     <!-- Servlet that dispatches request to registered handlers (Controller implementations) -->
     <servlet>
@@ -151,13 +151,13 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
     -->
 
     <!-- Prometheus Servlet -->    
-    <!-- <servlet>
+    <servlet>
         <servlet-name>metrics</servlet-name>
         <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>metrics</servlet-name>
-        <url-pattern>/actuator/prometheus</url-pattern>
-    </servlet-mapping>       -->
+        <url-pattern>/metrics</url-pattern>
+    </servlet-mapping>      
 
 </web-app>
