--- a/pom.xml
+++ b/pom.xml
@@ -341,6 +341,13 @@
 			<artifactId>simpleclient_pushgateway</artifactId>
 			<version>0.8.0</version>
 		</dependency>
+
+		<!-- Log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		
 	</dependencies>
 	<dependencyManagement>
