--- a/templates/deploy-castor.yml
+++ b/templates/deploy-castor.yml
@@ -5,6 +5,7 @@ apiVersion: v1
 kind: Template
 labels:
   app: castor
+  application: Furballs
   template: deploy-castor
 message: Deploy Castor
 metadata:
@@ -26,6 +27,7 @@ objects:
     labels:
       app: castor
       monitor: 'true'
+      application: Furballs
     name: castor
   spec:
     ports:
@@ -50,6 +52,7 @@ objects:
     labels:
       app: castor
       monitor: 'true'
+      application: Furballs
     name: castor
   spec:
     port:
@@ -68,6 +71,7 @@ objects:
     labels:
       app: castor
       monitor: 'true'
+      application: Furballs
     name: castor
   spec:
     replicas: 1
@@ -92,6 +96,7 @@ objects:
           app: castor
           deploymentconfig: castor
           monitor: 'true'
+          application: Furballs
       spec:
         containers:
           - image: 'docker-registry.default.svc:5000/perseus/castor:latest'
