--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         id="WebApp_ID" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
 
     <display-name>Spring PetClinic</display-name>
     <description>Spring PetClinic sample application</description>
-    
+
     <context-param>
         <param-name>spring.profiles.active</param-name>
         <param-value>jpa</param-value>
     </context-param>
 
-   <!-- When using Spring JDBC, use the following: -->
-   <!--  <context-param>
+    <!-- When using Spring JDBC, use the following: -->
+    <!--  <context-param>
         <param-name>spring.profiles.active</param-name>
         <param-value>jdbc</param-value>
     </context-param>  -->
 
-   <!--  When using Spring Data JPA, uncomment the following: -->
-   <!--
+    <!--  When using Spring Data JPA, uncomment the following: -->
+    <!--
    	<context-param>
         <param-name>spring.profiles.active</param-name>
 		<param-value>spring-data-jpa</param-value>
@@ -92,7 +90,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         <servlet-name>dandelionServlet</servlet-name>
         <url-pattern>/dandelion-assets/*</url-pattern>
     </servlet-mapping>
-   
+
     <!-- Dandelion filter definition and mapping -->
     <filter>
         <filter-name>dandelionFilter</filter-name>
@@ -115,42 +113,42 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
         <filter-name>httpMethodFilter</filter-name>
         <servlet-name>petclinic</servlet-name>
     </filter-mapping>
-    
-    <!-- used to provide the ability to enter Chinese characters inside the Owner Form -->    
+
+    <!-- used to provide the ability to enter Chinese characters inside the Owner Form -->
     <filter>
-	    <filter-name>encodingFilter</filter-name>
-	    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-	    <init-param>
-	        <param-name>encoding</param-name>
-	        <param-value>UTF-8</param-value>
-	    </init-param>
-	    <init-param>
-	        <param-name>forceEncoding</param-name>
-	        <param-value>true</param-value>
-	    </init-param>
-	 </filter>
-	
-	 <filter-mapping>
-	    <filter-name>encodingFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	 </filter-mapping>
- 
-     <!-- Dandelion-Datatables filter, used for basic export -->
-     <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <!-- Dandelion-Datatables filter, used for basic export -->
+    <filter>
         <filter-name>datatables</filter-name>
         <filter-class>com.github.dandelion.datatables.core.web.filter.DatatablesFilter</filter-class>
-     </filter>
-     <filter-mapping>
+    </filter>
+    <filter-mapping>
         <filter-name>datatables</filter-name>
         <url-pattern>/*</url-pattern>
-     </filter-mapping>
-    
+    </filter-mapping>
+
     <!--  	No need for welcome-file declaration here.
     		See inside spring/mvc-core-config.xml : 
     		<mvc:view-controller path="/" view-name="welcome" /> 
     -->
 
-    <!-- Prometheus Servlet -->    
+    <!-- Prometheus Servlet   
     <servlet>
         <servlet-name>metrics</servlet-name>
         <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
@@ -158,6 +156,19 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
     <servlet-mapping>
         <servlet-name>metrics</servlet-name>
         <url-pattern>/actuator/prometheus</url-pattern>
-    </servlet-mapping>      
+    </servlet-mapping>
+    -->
+
+    <!-- Azure Insights -->
+    <filter>
+        <filter-name>ApplicationInsightsWebFilter</filter-name>
+        <filter-class>
+           com.microsoft.applicationinsights.web.internal.WebRequestTrackingFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ApplicationInsightsWebFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
