--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,12 @@
             <javaVersion>jre8</javaVersion>
             <webContainer>jre8</webContainer>
           </runtime>
+					<appSettings>
+						<property>
+							<name>JAVA_OPTS</name>
+							<value>-Dserver.port=80</value>
+						</property>
+					</appSettings>          
           <deployment>
             <resources>
               <resource>
