--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,14 @@
     <groupId>org.springframework.samples</groupId>
     <artifactId>spring-petclinic</artifactId>
     <version>2.2.0.BUILD-SNAPSHOT</version>
+    <name>petclinic</name>
+    <description>Pet Clinic</description>
+    <packaging>war</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.5.RELEASE</version>
     </parent>
-    <name>petclinic</name>
     <properties>
         <!-- Generic properties -->
         <java.version>1.8</java.version>
