--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>ROOT</finalName>
+    <!-- <finalName>ROOT</finalName> -->
     <plugins>
       <plugin>
         <groupId>io.spring.javaformat</groupId>
