--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>2.2.0.BUILD-SNAPSHOT</version>
   <name>petclinic</name>
   <description>Pet Clinic</description>
-  <packaging>war</packaging>
+  <!-- <packaging>war</packaging> -->
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
