Update build-castor.yml for Azure Pipelines

--- a/azure-pipelines/build-castor.yml
+++ b/azure-pipelines/build-castor.yml
@@ -51,7 +51,7 @@ stages:
           displayName: 'Stage Files'
           inputs:
             SourceFolder: 'target'
-            Contents: '*.war'
+            Contents: '*.jar'
             TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
         # Publish WAR File as Pipeline Build
