--- a/azure-arm/castor-app.json
+++ b/azure-arm/castor-app.json
@@ -119,8 +119,7 @@
                 "http20Enabled": false,
                 "minTlsVersion": "1.2",
                 "ftpsState": "AllAllowed",
-                "reservedInstanceCount": 0,
-                "JAVA_OPTS":"-Dserver.port=80"
+                "reservedInstanceCount": 0
             }
         }
     ]
