--- a/azure-arm/castor-app.json
+++ b/azure-arm/castor-app.json
@@ -119,14 +119,7 @@
                 "http20Enabled": false,
                 "minTlsVersion": "1.2",
                 "ftpsState": "AllAllowed",
-                "reservedInstanceCount": 0,
-                "appSettings": [
-                    {
-                        "name": "JAVA_OPTS",
-                        "value": "-Dserver.port=80",
-                        "slotSetting": false
-                    }
-                ]
+                "reservedInstanceCount": 0
             }
         }
     ]
