--- a/azure-arm/castor-app.json
+++ b/azure-arm/castor-app.json
@@ -125,7 +125,7 @@
         {
             "type": "Microsoft.Web/sites/config",
             "apiVersion": "2018-11-01",
-            "name": "[concat(parameters('webAppName'), '/config')]",
+            "name": "[concat(parameters('webAppName'), '-props')]",
             "location": "[resourceGroup().location]",
             "dependsOn": [
                 "[resourceId('Microsoft.Web/sites', parameters('webAppName'))]"
