--- a/azure-arm/castor-app.json
+++ b/azure-arm/castor-app.json
@@ -185,7 +185,7 @@
                 "webhookReceivers": [
                   {
                     "identifierUri": null,
-                    "name": "orlandodemo04",
+                    "name": "orlandodemo04-1",
                     "objectId": null,
                     "serviceUri": "https://orlandodemo04.service-now.com/api/global/em/inbound_event_azure",
                     "tenantId": null,
@@ -194,13 +194,22 @@
                   },
                   {
                     "identifierUri": null,
-                    "name": "pagerduty",
+                    "name": "pagerduty-1",
                     "objectId": null,
                     "serviceUri": "https://events.pagerduty.com/integration/c080d4fce4cf4da9b48854b6873bfe09/enqueue",
                     "tenantId": null,
                     "useAadAuth": false,
                     "useCommonAlertSchema": false
-                  }                  
+                  },
+                  {
+                    "identifierUri": null,
+                    "name": "modops-1",
+                    "objectId": null,
+                    "serviceUri": "https://snsfwpoc.service-now.com/api/sn_itx_sfw_core/service_integrations/event_sink/48af9ed6db7d5c1062dff1471d96196e",
+                    "tenantId": null,
+                    "useAadAuth": false,
+                    "useCommonAlertSchema": true
+                  }                                
                 ],
                 "itsmReceivers": [],
                 "azureAppPushReceivers": [],
