--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
       <artifactId>applicationinsights-web-auto</artifactId>
       <version>2.6.0</version>
     </dependency>
+    <!-- Datadog --> 
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-datadog</artifactId>
+      <version>1.3.0</version>
+    </dependency>    
   </dependencies>
   <build>
     <finalName>app</finalName>
