--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,15 @@ spring.messages.basename=messages/messages
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=*
 
+# Micrometer
+management.metrics.use-global-registry=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
+management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
+
+# Datadog
+management.metrics.export.datadog.api-key=457b289c7b2ca162a60ef83c7f5f1e49
+
 # Logging
 logging.level.org.springframework=INFO
 # logging.level.org.springframework.web=DEBUG
