--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
     </dependency>
+    <!-- Micrometer Core -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+      <version>1.5.2</version>
+    </dependency>
     <!-- Azure Micrometer -->
     <dependency>
       <groupId>io.micrometer</groupId>
@@ -132,7 +138,8 @@
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-datadog</artifactId>
-      <version>1.3.0</version>
+      <!-- <version>1.3.0</version> -->
+      <version>1.5.2</version>
     </dependency>    
   </dependencies>
   <build>
