--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Application Name
+spring.application.name=castor
+
 # database init, supports mysql too
 database=h2
 spring.datasource.schema=classpath*:db/${database}/schema.sql
