--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.springframework.samples</groupId>
@@ -134,13 +134,19 @@
       <artifactId>applicationinsights-web-auto</artifactId>
       <version>2.6.0</version>
     </dependency>
-    <!-- Datadog --> 
+    <!-- Datadog -->
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-datadog</artifactId>
       <!-- <version>1.3.0</version> -->
       <version>1.5.2</version>
-    </dependency>    
+    </dependency>
+    <!-- Chaos Monkey -->
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>chaos-monkey-spring-boot</artifactId>
+      <version>2.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>app</finalName>
