--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.open-in-view=false
 spring.messages.basename=messages/messages
 
 # Actuator / Management
-management.endpoints.web.base-path=/manage
+management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
 
 # Micrometer
@@ -28,6 +28,19 @@ management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95,
 
 # Datadog
 management.metrics.export.datadog.api-key=457b289c7b2ca162a60ef83c7f5f1e49
+
+# Chaos Monkey
+spring.profiles.active=chaos-monkey
+# Start off disabled
+chaos.monkey.enabled=false
+# Watchers
+chaos.monkey.watcher.controller=true
+chaos.monkey.watcher.restController=true
+chaos.monkey.watcher.service=true
+chaos.monkey.watcher.repository=true
+# Management
+management.endpoint.chaosmonkey.enabled=true
+management.endpoint.chaosmonkeyjmx.enabled=true
 
 # Logging
 logging.level.org.springframework=INFO
