--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
 management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
 
 # Datadog
-management.metrics.export.datadog.api-key=457b289c7b2ca162a60ef83c7f5f1e49
+management.metrics.export.datadog.api-key=@datadog.api-key@
 
 # Chaos Monkey
 spring.profiles.active=chaos-monkey
