--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -47,4 +47,4 @@ jobs:
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       with:
-        args: apply -f yaml/deploy-castir.yaml -n sandbox
+        args: apply -f yaml/deploy-castor.yaml -n sandbox
