--- a/pom.xml
+++ b/pom.xml
@@ -122,23 +122,30 @@
       <artifactId>micrometer-core</artifactId>
       <version>1.5.2</version>
     </dependency>
-    <!-- Azure Micrometer -->
+    <!-- Prometheus -->
+    <dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.5.4</version>
+		</dependency>    
+    <!-- Azure Micrometer 
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-azure-monitor</artifactId>
       <version>1.4.0</version>
     </dependency>
-    <!-- Azure JDK Insights -->
+    -->
+    <!-- Azure JDK Insights 
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>applicationinsights-web-auto</artifactId>
       <version>2.6.0</version>
     </dependency>
+    -->
     <!-- Datadog -->
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-datadog</artifactId>
-      <!-- <version>1.3.0</version> -->
       <version>1.5.2</version>
     </dependency>
     <!-- Chaos Monkey -->
@@ -290,41 +297,6 @@
             <version>${mockito.version}</version>
           </dependency>
         </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-webapp-maven-plugin</artifactId>
-        <version>1.9.1</version>
-        <configuration>
-          <appName>stage-castor-app</appName>
-          <schemaVersion>V2</schemaVersion>
-          <!-- Use Existing Resource Group -->
-          <resourceGroup>castor-rg</resourceGroup>
-          <!-- Use Existing Service Plan for a B1 Server -->          <!-- <pricingTier>B1</pricingTier> -->          <!-- <region>eastus</region> -->
-          <appServicePlanName>castor-sp</appServicePlanName>
-          <appServicePlanResourceGroup>castor-rg</appServicePlanResourceGroup>
-          <runtime>
-            <os>linux</os>
-            <javaVersion>jre8</javaVersion>
-            <webContainer>jre8</webContainer>
-          </runtime>
-          <appSettings>
-            <property>
-              <name>JAVA_OPTS</name>
-              <value>-Dserver.port=80</value>
-            </property>
-          </appSettings>
-          <deployment>
-            <resources>
-              <resource>
-                <directory>${project.basedir}/target</directory>
-                <includes>
-                  <include>*.jar</include>
-                </includes>
-              </resource>
-            </resources>
-          </deployment>
-        </configuration>
       </plugin>
     </plugins>
   </build>
