--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
 
 # Micrometer
-management.metrics.use-global-registry=true
+# management.metrics.use-global-registry=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.metrics.distribution.sla.http.server.requests=100ms, 200ms, 400ms
 management.metrics.distribution.percentiles.http.server.requests=0.5, 0.9, 0.95, 0.99, 0.999
@@ -49,3 +49,6 @@ logging.level.org.springframework=INFO
 
 # Maximum time static resources should be cached
 spring.resources.cache.cachecontrol.max-age=12h
+
+# Git
+management.info.git.mode=full
