--- a/yaml/deploy-castor.yaml
+++ b/yaml/deploy-castor.yaml
@@ -21,6 +21,13 @@ spec:
         image: pangealab/castor:latest
         ports:
         - containerPort: 8080
+        env:
+          - name: LS_ACCESS_TOKEN
+            value: ${{ secrets.LIGHTSTEP_ACCESS_TOKEN }}
+          - name: LS_SERVICE_NAME
+            value: castor
+          - name: LS_SERVICE_VERSION
+            value: latest 
 ---
 apiVersion: v1
 kind: Service
