--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -40,6 +40,13 @@ jobs:
         role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
         role-duration-seconds: 900
         role-session-name: github
+        
+    # Substitute Variables
+    - name: Substitute Variables
+      env:
+        LS_ACCESS_TOKEN: ${{ secrets.LIGHTSTEP_ACCESS_TOKEN }}
+      run: | 
+        envsubst < yaml/deploy-castor.yaml > yaml/deploy-castor.yaml.subst
       
     # Deploy to Kubernetes
     - name: Deploy to Kubernetes
